# Self_Balance_Car

./: .gitattributes  .gitignore  LICENSE  Self_Balance_Car_PCB_BOM.xlsx
Self_Balance_Car_3D_Model/: Body.SLDPRT  Bottom_Mount.SLDPRT  Middle_body.SLDPRT  Motor.SLDPRT  Motor_Axle.SLDPRT  Motor_mount2.SLDPRT  Power_Bank.SLDPRT  Wheel.SLDPRT  ~$Motor_mount2.SLDPRT
Self_Balance_Car_3D_Model/Print/: Body.3mf  Body.STL  Bottom_Mount.STL  Bottom_Mount^Assem1.STL  Left_NEW.STL  Left_Wheel_big.STL  Middle_plate_up.STL  Motor_mount2.STL  Right_NEW.STL  Right_Wheel_big.STL  Small.3mf  Small.STL  Top_Cover.STL  WheelL.STL  WheelR.STL  Wheel_Big_New.STL  Wheel_Big_New2.STL  Wheel_NEW1.3mf  Wheel_NEW1.STL  Wheel_NEW2.3mf
Self_Balance_Car_3D_Model/backup/: Bread_Board.SLDPRT  Middle_body.SLDPRT  Middle_bread_board_down.SLDPRT  Motor_backup.SLDPRT  Motor_mount.SLDPRT  Motor_mount2(1).SLDPRT  Right_Wheel.SLDPRT  Right_Wheel_big.SLDPRT  Speaker.SLDPRT  Wheel.SLDPRT
Self_Balance_Car_ESP32S3_N8R8/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
Self_Balance_Car_ESP32S3_N8R8/components/BLUFI_t/: CMakeLists.txt  blufi_app.c  blufi_init.c  blufi_security.c
Self_Balance_Car_ESP32S3_N8R8/components/BLUFI_t/include/: blufi_app.h
Self_Balance_Car_ESP32S3_N8R8/components/Data_handle/: CMakeLists.txt  Data_handle.c
Self_Balance_Car_ESP32S3_N8R8/components/Data_handle/include/: Data_handle.h
Self_Balance_Car_ESP32S3_N8R8/components/WIFI/: CMakeLists.txt  wifi.c
Self_Balance_Car_ESP32S3_N8R8/components/WIFI/include/: wifi.h
Self_Balance_Car_ESP32S3_N8R8/components/ble_t/: CMakeLists.txt  ble_t.c
Self_Balance_Car_ESP32S3_N8R8/components/ble_t/include/: ble_t.h
Self_Balance_Car_ESP32S3_N8R8/main/: CMakeLists.txt  Kconfig.projbuild  (+1 more)
Self_Balance_Car_STM32F103RET6/: .cproject  .mxproject  .project  ELEC3300_STM32F103RET6 Debug.launch  ELEC3300_STM32F103RET6.ioc  STM32F103RETX_FLASH.ld
Self_Balance_Car_Wechatmini_uni/: App.vue  manifest.json  package-lock.json  package.json  pages.json  project.config.json  project.private.config.json
(+89 files in other folders)
